--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title:              Portfolio Template
-email:              your-email@domain.com
-description:        "Portfolio template for students in the MSR program at Northwestern University"
+title:              Andrew Turchina|Portfolio
+email:              andrewturchina2015@u.northwestern.edu
+description:        "Portfolio"
 url:                "http://localhost:4000"
 baseurl:            /portfolio
 
